--- a/home/home.html
+++ b/home/home.html
@@ -135,5 +135,38 @@
         </section>
     </main>
     <!-- Footer goes here -->
+    <footer class="footer">
+        <div class="left">
+            <p class="footer_heading">ABOUT</p>
+            <p class="about_desc"> Bull-ian is a startup who wants to help students outside schools/college, who needs special attention on specific subjects to attain custom tailored goals.
+            </p>
+        </div>
+        <div class="centered">
+            <p class="footer_heading">SOCIAL MEDIA</p>
+            <img class="social_media" src="images/instagram_logo.png" alt="instagram" />
+            <img class="social_media" src="images/twitter_logo.png" alt="twitter" />
+            <img class="social_media" src="images/fb_logo.png" alt="facebook" />
+            <img class="social_media" src="images/youtube_logo.png" alt="youtube" />
+        </div>
+        <div class="right">
+            <p class="footer_heading">SUBJECTS</p>
+            <div class="footer_content">
+                <p>Math
+                    <br>Science
+                    <br>English
+                    <br>AP
+                </p>
+            </div>
+        </div>
+        <div class="right">
+            <p class="footer_heading">LEARN MORE</p>
+            <div class="footer_content">
+                <p>FAQs
+                    <br>Contact Us
+                    <br>Terms of Service
+                </p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html> 
