changes to products page
Making some changes based on comments from instructor

--- a/products/products.html
+++ b/products/products.html
@@ -13,12 +13,16 @@
 
 <body>
     <main class="main-body">
-        <section class="test-section mob-sec-pad">
+        <section class="main-container display-flex vert-flex-center space-apart mob-flex-dir-col mob-sec-pad mbtm-4">
+            <div class="width-40 mob-width-100">
+                <h1>Courses</h1>
+            </div>
+        </section>
+        <section class="mob-sec-pad">
             <div class="main-container">
-                <h1 class="mbtm-3">Courses</h1>
                 <div class="display-flex mob-flex-dir-col space-apart mbtm-3">
                     <div class="products-card">
-                        <a href=" " class="anchor-style display-flex hor-flex-center flex-dir-col">
+                        <a href=" " class="anchor-style display-flex hor-flex-center flex-dir-col vert-flex-center">
                             <h3 class="align-center margin-0 blue-text">Math</h3>
                             <p class="mbtm-8">Choose from a wide range of math branches to improve your confidence and skills. We have math experts to guide you every step of the way.</p>
                             <p class="width-40 main-button button-palm">Algebra</p>
@@ -29,7 +33,7 @@
                         </a>
                     </div>
                     <div class="products-card">
-                        <a href=" " class="anchor-style display-flex hor-flex-center flex-dir-col">
+                        <a href=" " class="anchor-style display-flex hor-flex-center flex-dir-col vert-flex-center">
                             <h3 class="align-center margin-0 blue-text">Science</h3>
                             <p class="mbtm-8">Be a science whiz. Improve your grades with us! </p>
                             <p class="width-40 main-button button-palm">Physics</p>
@@ -42,7 +46,7 @@
                 </div>
                 <div class="display-flex mob-flex-dir-col space-apart">
                     <div class="products-card">
-                        <a href=" " class="anchor-style display-flex hor-flex-center flex-dir-col">
+                        <a href=" " class="anchor-style display-flex hor-flex-center flex-dir-col vert-flex-center">
                             <h3 class="align-center margin-0 blue-text">English</h3>
                             <p class="mbtm-8">If you lack confidence in your reading or writing skills or if you are above grade level and requires enrichment opportunities, we are here to help you.</p>
                             <p class="width-40 main-button button-palm">Phonics</p>
@@ -53,7 +57,7 @@
                         </a>
                     </div>
                     <div class="products-card">
-                        <a href=" " class="anchor-style display-flex hor-flex-center flex-dir-col">
+                        <a href=" " class="anchor-style display-flex hor-flex-center flex-dir-col vert-flex-center">
                             <h3 class="align-center margin-0 blue-text">AP</h3>
                             <p class="mbtm-8">We can help you excel in advanced classes and increase your AP exam scores.</p>
                             <p class="width-40 main-button button-palm">AP Psychology</p>
