--- a/home/home.html
+++ b/home/home.html
@@ -1,27 +1,29 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/home.css"/>
-    <link rel="stylesheet" href="../common/styles/common.css"/>
+    <link rel="stylesheet" href="styles/home.css" />
+    <link rel="stylesheet" href="../common/styles/common.css" />
     <title>Bullian - coaching made easy</title>
 </head>
+
 <body>
     <!-- Header goes here -->
     <main class="main-body">
         <section class="main-container display-flex vert-flex-center space-apart mob-flex-dir-col mob-sec-pad mbtm-8">
             <div class="width-40 mob-width-100">
                 <h1>Coaching <br/><span class="blue-text">Made Easy</span></h1>
-                <img src="./svg/online-anywhere.svg" alt="Learn anywhere" class="width-100 mob-display"/>
+                <img src="./svg/online-anywhere.svg" alt="Learn anywhere" class="width-100 mob-display" />
                 <p class="mbtm-8">Bullian is a hybrid online learning platform where students can choose to learn with an instructor of their choice face to face or they can choose from a plethora of do-at-your-pace courses</p>
                 <form action="" method="POST" class="display-flex space-apart">
-                    <input type="email" class="width-60 input-form-field" name="stud-signup-email" placeholder="Enter your email"/>
+                    <input type="email" class="width-60 input-form-field" name="stud-signup-email" placeholder="Enter your email" />
                     <button type="submit" class="width-40 main-button button-palm">Get Started</button>
                 </form>
             </div>
             <div class="width-50 mob-width-100 mob-display-none">
-                <img src="./svg/online-anywhere.svg" alt="Learn anywhere" class="width-100"/>
+                <img src="./svg/online-anywhere.svg" alt="Learn anywhere" class="width-100" />
             </div>
         </section>
         <article class="info-section mob-sec-pad">
@@ -35,25 +37,25 @@
                 <div class="display-flex mob-flex-dir-col space-apart mbtm-3">
                     <div class="category-card">
                         <a href="" class="anchor-style display-flex hor-flex-center flex-dir-col">
-                            <img src="./svg/design.svg" alt="Design" class="catoegory-icon"/>
+                            <img src="./svg/design.svg" alt="Design" class="catoegory-icon" />
                             <h3 class="align-center margin-0 blue-text">Design</h3>
                         </a>
                     </div>
                     <div class="category-card">
                         <a href="" class="anchor-style display-flex hor-flex-center flex-dir-col">
-                            <img src="./svg/development.svg" alt="Design" class="catoegory-icon"/>
+                            <img src="./svg/development.svg" alt="Design" class="catoegory-icon" />
                             <h3 class="align-center margin-0 blue-text">Development</h3>
                         </a>
                     </div>
                     <div class="category-card">
                         <a href="" class="anchor-style display-flex hor-flex-center flex-dir-col">
-                            <img src="./svg/marketing.svg" alt="Design" class="catoegory-icon"/>
+                            <img src="./svg/marketing.svg" alt="Design" class="catoegory-icon" />
                             <h3 class="align-center margin-0 blue-text">Marketing and Strategy</h3>
                         </a>
                     </div>
                     <div class="category-card">
                         <a href="" class="anchor-style display-flex hor-flex-center flex-dir-col">
-                            <img src="./svg/software.svg" alt="Design" class="catoegory-icon"/>
+                            <img src="./svg/software.svg" alt="Design" class="catoegory-icon" />
                             <h3 class="align-center margin-0 blue-text">Software and IT</h3>
                         </a>
                     </div>
@@ -61,25 +63,25 @@
                 <div class="display-flex mob-flex-dir-col space-apart">
                     <div class="category-card">
                         <a href="" class="anchor-style display-flex hor-flex-center flex-dir-col">
-                            <img src="./svg/design.svg" alt="Design" class="catoegory-icon"/>
+                            <img src="./svg/design.svg" alt="Design" class="catoegory-icon" />
                             <h3 class="align-center margin-0 blue-text">Design</h3>
                         </a>
                     </div>
                     <div class="category-card">
                         <a href="" class="anchor-style display-flex hor-flex-center flex-dir-col">
-                            <img src="./svg/development.svg" alt="Design" class="catoegory-icon"/>
+                            <img src="./svg/development.svg" alt="Design" class="catoegory-icon" />
                             <h3 class="align-center margin-0 blue-text">Development</h3>
                         </a>
                     </div>
                     <div class="category-card">
                         <a href="" class="anchor-style display-flex hor-flex-center flex-dir-col">
-                            <img src="./svg/marketing.svg" alt="Design" class="catoegory-icon"/>
+                            <img src="./svg/marketing.svg" alt="Design" class="catoegory-icon" />
                             <h3 class="align-center margin-0 blue-text">Marketing and Strategy</h3>
                         </a>
                     </div>
                     <div class="category-card">
                         <a href="" class="anchor-style display-flex hor-flex-center flex-dir-col">
-                            <img src="./svg/software.svg" alt="Design" class="catoegory-icon"/>
+                            <img src="./svg/software.svg" alt="Design" class="catoegory-icon" />
                             <h3 class="align-center margin-0 blue-text">Software and IT</h3>
                         </a>
                     </div>
@@ -89,15 +91,15 @@
         <article class="info-section mob-sec-pad">
             <div class="main-container display-flex space-apart vert-flex-center mob-flex-dir-col mob-sec-pad">
                 <div class="width-40 mob-width-100 mob-display-none">
-                    <img src="./svg/online-collab.svg" alt="Become an instructor" class="width-100"/>
+                    <img src="./svg/online-collab.svg" alt="Become an instructor" class="width-100" />
                 </div>
                 <div class="width-50 mob-width-100">
                     <h1>Want to become an instructor? <span class="blue-text">Join Us.</span></h1>
-                    <img src="./svg/online-collab.svg" alt="Become an instructor" class="width-100 mob-display"/>
+                    <img src="./svg/online-collab.svg" alt="Become an instructor" class="width-100 mob-display" />
                     <p>Over 100+ instructors are currently teaching 1500+ students through our platform. We provide all the necessary tools and equipments required for a holistic learning environment in which a student as well as a teacher can flourish unconditionally.</p>
                     <div class="main-container button-container display-flex"><a href="" class="main-button button-palm anchor-style ">Start teaching today</a></div>
                 </div>
-                
+
             </div>
         </article>
         <section class="test-section mob-sec-pad ">
@@ -105,28 +107,28 @@
             <div class="main-container card-container display-flex space-apart mob-flex-dir-col">
                 <div class="test-card">
                     <div class="card-contents">
-                        <img src="./images/test-1.jpg" alt="" class="width-100 test-image"/>
+                        <img src="./images/test-1.jpg" alt="" class="width-100 test-image" />
                         <p>John Doe<br/><small>IT Specialist</small></p>
                         <p>“With Bullian, I get all the tools I need in one platform.”</p>
                     </div>
                 </div>
                 <div class="test-card">
                     <div class="card-contents">
-                        <img src="./images/test-2.jpg" alt="" class="width-100 test-image"/>
+                        <img src="./images/test-2.jpg" alt="" class="width-100 test-image" />
                         <p>John Doe<br/><small>IT Specialist</small></p>
                         <p>“Thank you to Bullian for creating an awesome platform and community.”</p>
                     </div>
                 </div>
                 <div class="test-card">
                     <div class="card-contents">
-                        <img src="./images/test-3.jpg" alt="" class="width-100 test-image"/>
+                        <img src="./images/test-3.jpg" alt="" class="width-100 test-image" />
                         <p>Eliza Banks<br/><small>Photographer</small></p>
                         <p>“Bullian is the perfect platform for us to learn our explore.”</p>
                     </div>
                 </div>
                 <div class="test-card">
                     <div class="card-contents">
-                        <img src="./images/test-4.jpg" alt="" class="width-100 test-image"/>
+                        <img src="./images/test-4.jpg" alt="" class="width-100 test-image" />
                         <p>Cathy Wood<br/><small>Hobbist Musician</small></p>
                         <p class="quote">“There is an overall 'helpful' feeling in here.”</p>
                     </div>
@@ -143,15 +145,15 @@
         </div>
         <div class="centered">
             <p class="footer_heading">SOCIAL MEDIA</p>
-            <img class="social_media" src="images/instagram_logo.png" alt="instagram" />
-            <img class="social_media" src="images/twitter_logo.png" alt="twitter" />
-            <img class="social_media" src="images/fb_logo.png" alt="facebook" />
-            <img class="social_media" src="images/youtube_logo.png" alt="youtube" />
+            <img class="social_media" src="../common/images/instagram_logo.png" alt="instagram" />
+            <img class="social_media" src="../common/images/twitter_logo.png" alt="twitter" />
+            <img class="social_media" src="../common/images/fb_logo.png" alt="facebook" />
+            <img class="social_media" src="../common/images/youtube_logo.png" alt="youtube" />
         </div>
         <div class="right">
             <p class="footer_heading">SUBJECTS</p>
             <div class="footer_content">
-                <p>Math
+                <p class="margin-0">Math
                     <br>Science
                     <br>English
                     <br>AP
@@ -161,12 +163,14 @@
         <div class="right">
             <p class="footer_heading">LEARN MORE</p>
             <div class="footer_content">
-                <p>FAQs
-                    <br>Contact Us
-                    <br>Terms of Service
-                </p>
+                <ul>
+                    <li><a href="../faq/faq.html">FAQs</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Terms of Service</a></li>
+                </ul>
             </div>
         </div>
     </footer>
 </body>
-</html> 
+
+</html>
