--- a/products/products.html
+++ b/products/products.html
@@ -87,7 +87,7 @@
         <div class="right">
             <p class="footer_heading">SUBJECTS</p>
             <div class="footer_content">
-                <p>Math
+                <p class="margin-0">Math
                     <br>Science
                     <br>English
                     <br>AP
@@ -97,10 +97,11 @@
         <div class="right">
             <p class="footer_heading">LEARN MORE</p>
             <div class="footer_content">
-                <p>FAQs
-                    <br>Contact Us
-                    <br>Terms of Service
-                </p>
+                <ul>
+                    <li><a href="../faq/faq.html">FAQs</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Terms of Service</a></li>
+                </ul>
             </div>
         </div>
     </footer>
