changes to courses and FAQ

--- a/products/products.html
+++ b/products/products.html
@@ -12,19 +12,20 @@
 </head>
 
 <body>
-    <main class="main-body">
-        <section class="main-container display-flex vert-flex-center space-apart mob-flex-dir-col mob-sec-pad mbtm-4">
-            <div class="width-40 mob-width-100">
-                <h1>Courses</h1>
-            </div>
-        </section>
+    <header>
+        <img src="images/joanna-kosinska-7ACuHoezUYk-unsplash.jpg" alt="courses" class="course_img" />
+        <div class="width-40 mob-width-100" id="course_header">
+            <h1>Courses</h1>
+        </div>
+    </header>
+    <main class="products-body">
         <section class="mob-sec-pad">
             <div class="main-container">
                 <div class="display-flex mob-flex-dir-col space-apart mbtm-3">
                     <div class="products-card">
-                        <a href=" " class="anchor-style display-flex hor-flex-center flex-dir-col vert-flex-center">
-                            <h3 class="align-center margin-0 blue-text">Math</h3>
-                            <p class="mbtm-8">Choose from a wide range of math branches to improve your confidence and skills. We have math experts to guide you every step of the way.</p>
+                        <a href="" class="anchor-style display-flex hor-flex-center flex-dir-col vert-flex-center">
+                            <h3 class="align-center margin-0 sub_heading_text">Math</h3>
+                            <p class="mbtm-8 content-font">Choose from a wide range of math branches to improve your confidence and skills. We have math experts to guide you every step of the way.</p>
                             <p class="width-40 main-button button-palm">Algebra</p>
                             <p class="width-40 main-button button-palm">Basic Math</p>
                             <p class="width-40 main-button button-palm">Geometry</p>
@@ -33,9 +34,9 @@
                         </a>
                     </div>
                     <div class="products-card">
-                        <a href=" " class="anchor-style display-flex hor-flex-center flex-dir-col vert-flex-center">
-                            <h3 class="align-center margin-0 blue-text">Science</h3>
-                            <p class="mbtm-8">Be a science whiz. Improve your grades with us! </p>
+                        <a href="" class="anchor-style display-flex hor-flex-center flex-dir-col vert-flex-center">
+                            <h3 class="align-center margin-0 sub_heading_text">Science</h3>
+                            <p class="mbtm-8 content-font">Be a science whiz. Improve your grades with us! </p>
                             <p class="width-40 main-button button-palm">Physics</p>
                             <p class="width-40 main-button button-palm">Chemistry</p>
                             <p class="width-40 main-button button-palm">Microbiology</p>
@@ -46,9 +47,9 @@
                 </div>
                 <div class="display-flex mob-flex-dir-col space-apart">
                     <div class="products-card">
-                        <a href=" " class="anchor-style display-flex hor-flex-center flex-dir-col vert-flex-center">
-                            <h3 class="align-center margin-0 blue-text">English</h3>
-                            <p class="mbtm-8">If you lack confidence in your reading or writing skills or if you are above grade level and requires enrichment opportunities, we are here to help you.</p>
+                        <a href="" class="anchor-style display-flex hor-flex-center flex-dir-col vert-flex-center">
+                            <h3 class="align-center margin-0 sub_heading_text">English</h3>
+                            <p class="mbtm-8 content-font">If you lack confidence in your reading or writing skills or if you are above grade level and requires enrichment opportunities, we are here to help you.</p>
                             <p class="width-40 main-button button-palm">Phonics</p>
                             <p class="width-40 main-button button-palm">Vocabulary</p>
                             <p class="width-40 main-button button-palm">Reading</p>
@@ -57,9 +58,9 @@
                         </a>
                     </div>
                     <div class="products-card">
-                        <a href=" " class="anchor-style display-flex hor-flex-center flex-dir-col vert-flex-center">
-                            <h3 class="align-center margin-0 blue-text">AP</h3>
-                            <p class="mbtm-8">We can help you excel in advanced classes and increase your AP exam scores.</p>
+                        <a href="" class="anchor-style display-flex hor-flex-center flex-dir-col vert-flex-center">
+                            <h3 class="align-center margin-0 sub_heading_text">AP</h3>
+                            <p class="mbtm-8 content-font">We can help you excel in advanced classes and increase your AP exam scores.</p>
                             <p class="width-40 main-button button-palm">AP Psychology</p>
                             <p class="width-40 main-button button-palm">AP Calculus</p>
                             <p class="width-40 main-button button-palm">AP Physics</p>
