removing unwanted images

--- a/products/products.html
+++ b/products/products.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <img src="images/joanna-kosinska-7ACuHoezUYk-unsplash.jpg" alt="courses" class="course_img" />
+        <img src="images/courses.jpg" alt="courses" class="course_img" />
         <div class="width-40 mob-width-100" id="course_header">
             <h1>Courses</h1>
         </div>
