Adding in signin/signup page integration

--- a/home/home.html
+++ b/home/home.html
@@ -9,6 +9,14 @@
 </head>
 <body>
     <!-- Header goes here -->
+    <header class = "top-banner-flex">
+        <img class="logo" src= "../common/images/bullian.png">
+        <div class = "nav-content-margin">Who we are</div>
+        <div class = "nav-content-margin">Courses</div>
+        <div class = "nav-content-margin">Testimonials</div>
+        <div class = "nav-content-margin">Faculty</div>
+        <div class = "nav-content-margin">Reach Us!</div>
+    </header>
     <main class="main-body">
         <section class="main-container display-flex vert-flex-center space-apart mob-flex-dir-col mob-sec-pad mbtm-8">
             <div class="width-40 mob-width-100">
