Adding in footer changes

--- a/learning/learning.html
+++ b/learning/learning.html
@@ -34,7 +34,7 @@
             <div class="width-20 mob-width-100 pad-3 mob-border-bot">
                 <h3>Live comments:</h3>
                 <hr/>
-                <ul class="list-style-none">
+                <ul class="list-style-none pad-none">
                     <li>
                         <b>Swapnil: </b>
                         <small>Good Morning</small>
