Adding in footer changes

--- a/home/home.html
+++ b/home/home.html
@@ -42,9 +42,11 @@
             </div>
         </section>
         <article class="info-section mob-sec-pad">
-            <h1 class="main-container mbtm-3">Learn at your own pace with experienced people from the industry. Collaborate for new ideas and let your dream come true.</h1>
-            <p class="main-container">We have catered to numerous people with their learning path. Be it a hobby or your profession, our experts will ensure that you grab each and every concept and able to deliver your capabilities to the maximum possible heights. </p>
-            <div class="main-container button-container display-flex mob-hor-flex-center"><a href="" class="main-button button-blue anchor-style ">Get started for free</a></div>
+            <div class="mob-sec-pad">
+                <h1 class="main-container mbtm-3">Learn at your own pace with experienced people from the industry. Collaborate for new ideas and let your dream come true.</h1>
+                <p class="main-container">We have catered to numerous people with their learning path. Be it a hobby or your profession, our experts will ensure that you grab each and every concept and able to deliver your capabilities to the maximum possible heights. </p>
+                <div class="main-container button-container display-flex mob-hor-flex-center"><a href="" class="main-button button-blue anchor-style ">Get started for free</a></div>
+            </div>
         </article>
         <section class="test-section mob-sec-pad">
             <div class="main-container">
@@ -152,39 +154,46 @@
         </section>
     </main>
     <!-- Footer goes here -->
-    <footer class="footer">
-        <div class="left">
-            <p class="footer_heading">ABOUT</p>
-            <p class="about_desc"> Bull-ian is a startup who wants to help students outside schools/college, who needs special attention on specific subjects to attain custom tailored goals.
-            </p>
-        </div>
-        <div class="centered">
-            <p class="footer_heading">SOCIAL MEDIA</p>
-            <img class="social_media" src="../common/images/instagram_logo.png" alt="instagram" />
-            <img class="social_media" src="../common/images/twitter_logo.png" alt="twitter" />
-            <img class="social_media" src="../common/images/fb_logo.png" alt="facebook" />
-            <img class="social_media" src="../common/images/youtube_logo.png" alt="youtube" />
-        </div>
-        <div class="right">
-            <p class="footer_heading">SUBJECTS</p>
-            <div class="footer_content">
-                <p class="margin-0">Math
-                    <br>Science
-                    <br>English
-                    <br>AP
-                </p>
+    <footer>
+        <section class="footer mob-sec-pad ">
+            <div class="main-container display-flex space-apart footer-container mob-flex-dir-col mob-align-center mob-sec-pad">
+                <div class="width-40 mob-width-100 ">
+                    <p class="footer_heading">ABOUT</p>
+                    <p> Bull-ian is a startup who wants to help students outside schools/college, who needs special attention on specific subjects to attain custom tailored goals.
+                    </p>
+                </div>
+                <div class="width-25 mob-width-100 ">
+                    <p class="footer_heading">SOCIAL MEDIA</p>
+                    <img class="social_media" src="../common/images/instagram_logo.png" alt="instagram" />
+                    <img class="social_media" src="../common/images/twitter_logo.png" alt="twitter" />
+                    <img class="social_media" src="../common/images/fb_logo.png" alt="facebook" />
+                    <img class="social_media" src="../common/images/youtube_logo.png" alt="youtube" />
+                </div>
+                <div class="width-15 mob-width-100 ">
+                    <p class="footer_heading">SUBJECTS</p>
+                    <div class="footer_content">
+                        <p class="margin-0">Math
+                            <br>Science
+                            <br>English
+                            <br>AP
+                        </p>
+                    </div>
+                </div>
+                <div class="width-15 mob-width-100 ">
+                    <p class="footer_heading">LEARN MORE</p>
+                    <div class="footer_content">
+                        <ul>
+                            <li><a href="../faq/faq.html">FAQs</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#">Terms of Service</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="right">
-            <p class="footer_heading">LEARN MORE</p>
-            <div class="footer_content">
-                <ul>
-                    <li><a href="../faq/faq.html">FAQs</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">Terms of Service</a></li>
-                </ul>
-            </div>
-        </div>
+        </section>
+        <section class="align-center copyright-section">
+            <p class="white-text margin-0 pad-1">© 2021 Copyright : Bullian Inc.</p>
+        </section>
     </footer>
 </body>
 </html> 
