--- a/authentication/authentication.html
+++ b/authentication/authentication.html
@@ -37,7 +37,7 @@
     </header>   
     <!-- Header/Nav ends here -->
     <main class="main-body">
-        <section class="main-container display-flex vert-flex-center space-apart mob-flex-dir-col-rev  mbtm-8 sign-in-container" id="log-in">
+        <section class="main-container display-flex vert-flex-center space-apart mob-flex-dir-col-rev  mbtm-8 mtop-8 sign-in-container" id="log-in">
             <div class="width-50 mob-width-100 pad-3 right-border">
                 <h1>Need an account?</h1>
                 <p class="mbtm-8">Bullian is a hybrid online learning platform where students can choose to learn with an instructor of their choice face to face or they can choose from a plethora of do-at-your-pace courses</p>
@@ -62,7 +62,7 @@
                 </form>
             </div>
         </section>
-        <section class="main-container display-flex vert-flex-center space-apart mob-flex-dir-col mbtm-8 sign-in-container hide-section" id="sign-up">
+        <section class="main-container display-flex vert-flex-center space-apart mob-flex-dir-col mbtm-8 mtop-8 sign-in-container hide-section" id="sign-up">
             <div class="width-50 mob-width-100 pad-3 mob-border-bot">
                 <h1>Create an account</h1>
                 <form method="POST" action="">
@@ -94,39 +94,46 @@
         </section>
     </main>
     <!-- Footer goes here -->
-    <footer class="footer">
-        <div class="left">
-            <p class="footer_heading">ABOUT</p>
-            <p class="about_desc"> Bull-ian is a startup who wants to help students outside schools/college, who needs special attention on specific subjects to attain custom tailored goals.
-            </p>
-        </div>
-        <div class="centered">
-            <p class="footer_heading">SOCIAL MEDIA</p>
-            <img class="social_media" src="../common/images/instagram_logo.png" alt="instagram" />
-            <img class="social_media" src="../common/images/twitter_logo.png" alt="twitter" />
-            <img class="social_media" src="../common/images/fb_logo.png" alt="facebook" />
-            <img class="social_media" src="../common/images/youtube_logo.png" alt="youtube" />
-        </div>
-        <div class="right">
-            <p class="footer_heading">SUBJECTS</p>
-            <div class="footer_content">
-                <p class="margin-0">Math
-                    <br>Science
-                    <br>English
-                    <br>AP
-                </p>
+    <footer>
+        <section class="footer mob-sec-pad ">
+            <div class="main-container display-flex space-apart footer-container mob-flex-dir-col mob-align-center mob-sec-pad">
+                <div class="width-40 mob-width-100 ">
+                    <p class="footer_heading">ABOUT</p>
+                    <p> Bull-ian is a startup who wants to help students outside schools/college, who needs special attention on specific subjects to attain custom tailored goals.
+                    </p>
+                </div>
+                <div class="width-25 mob-width-100 ">
+                    <p class="footer_heading">SOCIAL MEDIA</p>
+                    <img class="social_media" src="../common/images/instagram_logo.png" alt="instagram" />
+                    <img class="social_media" src="../common/images/twitter_logo.png" alt="twitter" />
+                    <img class="social_media" src="../common/images/fb_logo.png" alt="facebook" />
+                    <img class="social_media" src="../common/images/youtube_logo.png" alt="youtube" />
+                </div>
+                <div class="width-15 mob-width-100 ">
+                    <p class="footer_heading">SUBJECTS</p>
+                    <div class="footer_content">
+                        <p class="margin-0">Math
+                            <br>Science
+                            <br>English
+                            <br>AP
+                        </p>
+                    </div>
+                </div>
+                <div class="width-15 mob-width-100 ">
+                    <p class="footer_heading">LEARN MORE</p>
+                    <div class="footer_content">
+                        <ul>
+                            <li><a href="../faq/faq.html">FAQs</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#">Terms of Service</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="right">
-            <p class="footer_heading">LEARN MORE</p>
-            <div class="footer_content">
-                <ul>
-                    <li><a href="../faq/faq.html">FAQs</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">Terms of Service</a></li>
-                </ul>
-            </div>
-        </div>
+        </section>
+        <section class="align-center copyright-section">
+            <p class="white-text margin-0 pad-1">© 2021 Copyright : Bullian Inc.</p>
+        </section>
     </footer>
 </body>
 </html> 
