--- a/faq/faq.html
+++ b/faq/faq.html
@@ -12,11 +12,27 @@
 </head>
 
 <body>
-    <header id="faq_header">
+    <header class="main-header">
+        <div class="container">
+            <div class="mh-logo">
+                <img src="../common/images/bullian.png" width="200" class="header-img" alt="Flexbox.ninja">
+            </div>
+            <nav class="main-nav">
+                <ul class="main-nav-list">
+                    <li><a href="../home/home.html" class = "li-myButton">Home</a></li>
+                    <li><a href="#" class = "li-myButton">About us</a></li>
+                    <li><a href="#" class = "li-myButton">Our clients</a></li>
+                    <li> <a href="#" class = "li-myButton">Contact</a></li>
+                </ul>
+            </nav>
+            <a href="../authentication/authentication.html" class = "main-button button-blue anchor-style">Sign Up/ Login</a>
+        </div>
+    </header> 
+    <section id="faq_header">
         <img src="images/faq.jpg" alt="frequently asked questions" id="faq_img" />
         <h1 class="margin-0">Frequently Asked Questions</h1>
         <h4 class="grey_text margin-0">All that you need to know!</h4>
-    </header>
+    </section>
     <main class="main-body">
         <section class="mob-sec-pad">
             <div class="main-container">
@@ -82,40 +98,46 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
-        <div class="left">
-            <p class="footer_heading">ABOUT</p>
-            <p class="about_desc"> Bull-ian is a startup who wants to help students outside schools/college, who needs special attention on specific subjects to attain custom tailored goals.
-            </p>
-        </div>
-        <div class="centered">
-            <p class="footer_heading">SOCIAL MEDIA</p>
-            <img class="social_media" src="../common/images/instagram_logo.png" alt="instagram" />
-            <img class="social_media" src="../common/images/twitter_logo.png" alt="twitter" />
-            <img class="social_media" src="../common/images/fb_logo.png" alt="facebook" />
-            <img class="social_media" src="../common/images/youtube_logo.png" alt="youtube" />
-        </div>
-        <div class="right">
-            <p class="footer_heading">SUBJECTS</p>
-            <div class="footer_content">
-                <p class="margin-0">Math
-                    <br>Science
-                    <br>English
-                    <br>AP
-                </p>
+    <footer>
+        <section class="footer mob-sec-pad ">
+            <div class="main-container display-flex space-apart footer-container mob-flex-dir-col mob-align-center mob-sec-pad">
+                <div class="width-40 mob-width-100 ">
+                    <p class="footer_heading">ABOUT</p>
+                    <p> Bull-ian is a startup who wants to help students outside schools/college, who needs special attention on specific subjects to attain custom tailored goals.
+                    </p>
+                </div>
+                <div class="width-25 mob-width-100 ">
+                    <p class="footer_heading">SOCIAL MEDIA</p>
+                    <img class="social_media" src="../common/images/instagram_logo.png" alt="instagram" />
+                    <img class="social_media" src="../common/images/twitter_logo.png" alt="twitter" />
+                    <img class="social_media" src="../common/images/fb_logo.png" alt="facebook" />
+                    <img class="social_media" src="../common/images/youtube_logo.png" alt="youtube" />
+                </div>
+                <div class="width-15 mob-width-100 ">
+                    <p class="footer_heading">SUBJECTS</p>
+                    <div class="footer_content">
+                        <p class="margin-0">Math
+                            <br>Science
+                            <br>English
+                            <br>AP
+                        </p>
+                    </div>
+                </div>
+                <div class="width-15 mob-width-100 ">
+                    <p class="footer_heading">LEARN MORE</p>
+                    <div class="footer_content">
+                        <ul>
+                            <li><a href="../faq/faq.html">FAQs</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#">Terms of Service</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="right">
-            <p class="footer_heading">LEARN MORE</p>
-            <div class="footer_content">
-                <ul>
-                    <li><a href="faq.html">FAQs</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">Terms of Service</a></li>
-                </ul>
-
-            </div>
-        </div>
+        </section>
+        <section class="align-center copyright-section">
+            <p class="white-text margin-0 pad-1">© 2021 Copyright : Bullian Inc.</p>
+        </section>
     </footer>
 </body>
 
