updating faq page

--- a/faq/faq.html
+++ b/faq/faq.html
@@ -19,15 +19,15 @@
             </div>
             <nav class="main-nav">
                 <ul class="main-nav-list">
-                    <li><a href="../home/home.html" class = "li-myButton">Home</a></li>
-                    <li><a href="#" class = "li-myButton">About us</a></li>
-                    <li><a href="#" class = "li-myButton">Our clients</a></li>
-                    <li> <a href="#" class = "li-myButton">Contact</a></li>
+                    <li><a href="../home/home.html" class="li-myButton">Home</a></li>
+                    <li><a href="#" class="li-myButton">About us</a></li>
+                    <li><a href="#" class="li-myButton">Our clients</a></li>
+                    <li> <a href="#" class="li-myButton">Contact</a></li>
                 </ul>
             </nav>
-            <a href="../authentication/authentication.html" class = "main-button button-blue anchor-style">Sign Up/ Login</a>
+            <a href="../authentication/authentication.html" class="main-button button-blue anchor-style">Sign Up/ Login</a>
         </div>
-    </header> 
+    </header>
     <section id="faq_header">
         <img src="images/faq.jpg" alt="frequently asked questions" id="faq_img" />
         <h1 class="margin-0">Frequently Asked Questions</h1>
@@ -39,59 +39,59 @@
                 <ul>
                     <li>
                         <p class="faq">How do I register?</p>
-                        <p>On the <a href="../home/home.html" class="black-text">homepage</a>, click on “Get started for free” button. Fill the form and on the next page you can schedule a lesson.</p>
+                        <p class="ans">On the <a href="../home/home.html" class="black-text">homepage</a>, click on “Get started for free” button. Fill the form and on the next page you can schedule a lesson.</p>
                     </li><br/>
                     <li>
                         <p class="faq">Who are your tutors?</p>
-                        <p>Our tutors can be based anywhere in the world. What is common among them is their passion to help students, their willingness to learn, and their enthusiasm to teach. All our tutors have a graduate degree in the subject they teach
+                        <p class="ans">Our tutors can be based anywhere in the world. What is common among them is their passion to help students, their willingness to learn, and their enthusiasm to teach. All our tutors have a graduate degree in the subject they teach
                             and a degree in education. Those tutoring the high school grades have a post graduate degree in their subject.</p>
                     </li><br/>
                     <li>
                         <p class="faq">How exactly does an online tutoring session work?</p>
-                        <p>After you have registered for a class, and scheduled a session, then at the scheduled time, the student should be at their computer with their headset and microphone activated.The tutor starts the session 5 minutes before the scheduled
+                        <p class="ans">After you have registered for a class, and scheduled a session, then at the scheduled time, the student should be at their computer with their headset and microphone activated.The tutor starts the session 5 minutes before the scheduled
                             session time. Student should join the session by clicking the Join Session button on the website. This brings him/her into the live tutoring session.</p>
                     </li><br/>
                     <li>
                         <p class="faq">What are the tutoring hours?</p>
-                        <p>As we have students coming from all over the world, our tutors work round the clock, all seven days of week. If you are unable to schedule a tutoring session at your convenient date or time,</p>
+                        <p class="ans">As we have students coming from all over the world, our tutors work round the clock, all seven days of week. If you are unable to schedule a tutoring session at your convenient date or time,</p>
                     </li><br/>
                     <li>
                         <p class="faq">Will I have the same tutor for each session?</p>
-                        <p>Every effort is made to provide you the same tutor for a given subject for all sessions. In the event the assigned tutor is not available for a required date and time, a qualified alternate tutor will be assigned.</p>
+                        <p class="ans">Every effort is made to provide you the same tutor for a given subject for all sessions. In the event the assigned tutor is not available for a required date and time, a qualified alternate tutor will be assigned.</p>
                     </li><br/>
                     <li>
                         <p class="faq">Are all sessions recorded?</p>
-                        <p>Yes, we record each session. The recordings are for quality control, addressing customer issues, if any, and for further reference/review by the student or parent. Your session recording can be accessed only by you, your parent
+                        <p class="ans">Yes, we record each session. The recordings are for quality control, addressing customer issues, if any, and for further reference/review by the student or parent. Your session recording can be accessed only by you, your parent
                             or by authorized eTutorWorld personnel. Your session recordings are available for reference for a period of 30 days from date of the session</p>
                     </li><br/>
                     <li>
                         <p class="faq">What happens if I forget to join my session? </p>
-                        <p>At the scheduled session time the tutor will start the session and the tutor will remain online for10 minutes past the scheduled time. In the event the student does not show up, the session is terminated and is charged to your
+                        <p class="ans">At the scheduled session time the tutor will start the session and the tutor will remain online for10 minutes past the scheduled time. In the event the student does not show up, the session is terminated and is charged to your
                             account.
                     </li><br/>
                     <li>
                         <p class="faq">How far ahead can I schedule my tutor? </p>
-                        <p>You can schedule sessions for the next 6 weeks. When you go to the tutor’s calendar you will note it goes out for 6 weeks.
+                        <p class="ans">You can schedule sessions for the next 6 weeks. When you go to the tutor’s calendar you will note it goes out for 6 weeks.
                     </li><br/>
                     <li>
                         <p class="faq">How does the tutor know what curriculum the student studies/follows?</p>
-                        <p> Our tutors exactly know and follow the curriculum specified by the student’s school state education department.
+                        <p class="ans"> Our tutors exactly know and follow the curriculum specified by the student’s school state education department.
                     </li><br/>
                     <li>
                         <p class="faq">May I have a math tutor and a science tutor? </p>
-                        <p>Yes, you may have tutoring in multiple subjects, using the same learning package. Separate tutors may be selected for each subject.
+                        <p class="ans">Yes, you may have tutoring in multiple subjects, using the same learning package. Separate tutors may be selected for each subject.
                     </li><br/>
                     <li>
                         <p class="faq">Can I change the times of scheduled sessions? </p>
-                        <p>Yes! A student can cancel or reschedule a session by logging in using her/his username and password. The session cancellation or rescheduling should be done 24 hours before the session scheduled time.
+                        <p class="ans">Yes! A student can cancel or reschedule a session by logging in using her/his username and password. The session cancellation or rescheduling should be done 24 hours before the session scheduled time.
                     </li><br/>
                     <li>
                         <p class="faq">How can I extend a learning package? </p>
-                        <p>To add learning package you may subject button you wish to extendand select another learning package and use you credit card to make the purchase. You will use the same username and password.
+                        <p class="ans">To add learning package you may subject button you wish to extendand select another learning package and use you credit card to make the purchase. You will use the same username and password.
                     </li><br/>
                     <li>
                         <p class="faq">What are my options if I am not satisfied? </p>
-                        <p>If for any reason you are not satisfied, please contact us, and every effort will be made by Bullian to correct the issue. If we cannot meet your needs and you wish to cancel your Learning Package/Sessions you may do so with a
+                        <p class="ans">If for any reason you are not satisfied, please contact us, and every effort will be made by Bullian to correct the issue. If we cannot meet your needs and you wish to cancel your Learning Package/Sessions you may do so with a
                             72-hour notification.
                     </li><br/>
                 </ul>
