--- a/faq/faq.html
+++ b/faq/faq.html
@@ -36,17 +36,12 @@
     <main class="main-body">
         <section class="mob-sec-pad">
             <div class="main-container">
-                <div class="form-container">
+                <!-- <div class="form-container">
                     <form id="form">
                         <input id="searchbar" type="search" class="input" placeholder="Search..." aria-label="Search through FAQs" />
                         <button id="search" class="search-faq">search</button>
                         <button id="clear" class="clear-results">clear</button>
                     </form>
-
-                </div>
-                <!-- <div class="results-container">
-                    <ul class="results-list " id="list">
-                    </ul>
                 </div> -->
                 <ul>
                     <li>
@@ -151,8 +146,8 @@
             <p class="white-text margin-0 pad-1 ">© 2021 Copyright : Bullian Inc.</p>
         </section>
     </footer>
-    <script src="scripts/faq.js ">
-    </script>
+    <!-- <script src="scripts/faq.js ">
+    </script> -->
 </body>
 
 </html>
